--- a/WorldBorderPlus/index.html
+++ b/WorldBorderPlus/index.html
@@ -1,1 +1,15 @@
-Index
+<!-- C418-11.github.io/WorldBorderPlus -->
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="refresh" content="0;url=https://github.com/C418-11/WorldBorderPlus">
+    <title>WorldBorderPlus</title>
+</head>
+<body>
+    <script>
+        window.location.href = "https://github.com/C418-11/WorldBorderPlus";
+    </script>
+</body>
+</html>
